fix vw overflow issue

--- a/src/components/AboutFurniture/AboutFurniture.scss
+++ b/src/components/AboutFurniture/AboutFurniture.scss
@@ -10,7 +10,7 @@
   }
 
   &__image {
-    width: 100vw;
+    width: 100%;
     line-height: 0;
     box-sizing: border-box;
 
