--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,11 +4,12 @@
   padding: em(48) em(0);
   background-color: transparent;
   position: absolute;
-  width: 100vw;
   z-index: 1;
+  width: 100%;
 
   @include breakpoint(md) {
     padding: em(64) em(0);
+    width: 50%;
   }
 
   &__mobile {
@@ -29,7 +30,7 @@
     display: none;
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin: 0;
     background-color: var(--black-transparent);
